fixed view on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -81,7 +81,7 @@ button:focus-visible {
 
   --side-padding: 0.5rem;
   --top-padding: 0.5rem;
-  --btn-padding: 4px 8px;
+  --btn-padding: 10px 10px;
 
   --primary: rgb(229, 194, 50);
   --test: 1px solid red;
